# VTIL-Core

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Dependencies/capstone/: CMakeLists.txt
Dependencies/keystone/: CMakeLists.txt
VTIL-Architecture/: CMakeLists.txt
VTIL-Architecture/arch/: register_desc.hpp
VTIL-Architecture/routine/: basic_block.hpp  fwd.hpp  routine.cpp  routine.hpp  serialization.cpp
VTIL-Architecture/trace/: tracer.cpp  tracer.hpp
VTIL-Architecture/vm/: interface.hpp
VTIL-Common/: CMakeLists.txt
VTIL-Common/formats/: winpe.cpp
VTIL-Common/io/: asserts.hpp  logger.hpp
VTIL-Common/math/: operators.hpp  operators_partial.hpp
VTIL-Common/util/: copy_on_write.hpp  function_view.hpp  intrinsics.hpp  object_pool.hpp  relaxed_atomics.hpp  task.hpp  type_helpers.hpp
VTIL-Compiler/: CMakeLists.txt
VTIL-Compiler/common/: interface.hpp
VTIL-Compiler/optimizer/: bblock_thunk_removal_pass.cpp  branch_correction_pass.cpp
VTIL-Compiler/validation/: test1.cpp
VTIL-SymEx/: CMakeLists.txt
VTIL-SymEx/directives/: directive.cpp  directive.hpp  transformer.cpp
VTIL-SymEx/expressions/: expression.hpp  fwd.hpp
VTIL-Tests/: dummy.cpp  main.cpp
